[package]
name = "json_merger_lib"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A wasm-bindgen library to generate and apply JSON merge plans."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# The `default` feature enables the panic hook for better browser debugging.
# Note the "dep:" prefix, which explicitly enables the optional dependency.
default = ["dep:console_error_panic_hook"]

# This feature enables the `wee_alloc` allocator for smaller Wasm binaries.
# Note the "dep:" prefix here as well.
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"

# Optional dependency for smaller Wasm files.
# It's only included when the "wee_alloc" feature is active.
wee_alloc = { version = "0.4.5", optional = true }

# Optional dependency for better debugging in the browser console.
# It's included by default.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
